Fix Accessibility issues + Add contrast check and warning message in admin theme picker

--- a/frontend/sass/Components/Organisms/_o_HeroHome.scss
+++ b/frontend/sass/Components/Organisms/_o_HeroHome.scss
@@ -19,11 +19,12 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 5rem;
+      gap: 2rem;
    }
 
    &_logo {
       width: 100%;
+      height: auto;
       display: flex;
       justify-content: center;
 
@@ -58,9 +59,11 @@
    }
 
    &_scroll {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      position: absolute;
+      bottom: 1.5rem;
+      left: 50%;
+      transform: translateX(-50%);
+      cursor: pointer;
 
       i {
          font-size: 2rem;
@@ -69,6 +72,8 @@
    }
 
    @media screen and (min-width: responsive_variables.$screen-m-min) {
+      padding-top: 2rem;
+
       &_logo {
          img {
             width: 575px;
