--- a/frontend/sass/Components/Organisms/_o_HeroStaticPage.scss
+++ b/frontend/sass/Components/Organisms/_o_HeroStaticPage.scss
@@ -36,6 +36,7 @@
       position: absolute;
       bottom: 1.5rem;
       left: 50%;
+      transform: translateX(-50%);
       cursor: pointer;
 
       i {
