--- a/frontend/sass/Components/Pages/_p_Admin.scss
+++ b/frontend/sass/Components/Pages/_p_Admin.scss
@@ -347,6 +347,23 @@
     margin-right: 1rem;
   }
 
+  &_colorWarning {
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: $color-warning-light;
+    color: #b35b09;
+    border: 2px solid $color-warning;
+    border-radius: $border-radius;
+    font-size: 1rem;
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+
+    i {
+      font-size: 1.5rem;
+    }
+  }
+
   @media screen and (min-width: responsive_variables.$screen-m-min) {
     &_colorGrid {
       .p_Admin_field {
